# Error.Api

./: CMakeLists.txt  CMakePresets.json
public/PiSubmarine/Error/Api/: Error.h  ErrorCondition.h  MakeError.h  Result.h  ToStringView.h
src/: CMakeLists.txt
test/: CMakeLists.txt
test/PiSubmarine/Error/Api/: ErrorTest.cpp
